samples/_failures_safe/1761490781_17b522_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0cc66ce5.c: In function ‘main’:
./samples/SAFE/__tmp_0cc66ce5.c:185:15: error: expected ‘;’ at end of input
  185 |         printf
      |               ^
      |               ;
./samples/SAFE/__tmp_0cc66ce5.c:185:9: error: expected declaration or statement at end of input
  185 |         printf
      |         ^~~~~~
./samples/SAFE/__tmp_0cc66ce5.c:185:9: error: expected declaration or statement at end of input
